# amex-default-prediction

./: .gitignore  00_start.ipynb  README.md  chris_data.ipynb  chris_scratch01.ipynb  chris_tensorflow_transfomer.ipynb  config.py  daishu_feature_conbined1.ipynb  daishu_feature_conbined2.ipynb  daishu_lgb_main.ipynb  daishu_lgb_main2.ipynb  daishu_lgb_main3.ipynb  daishu_nn_main.ipynb  daishu_preprocess.ipynb  daishu_preprocess2.ipynb  daishu_preprocess3.ipynb  model.py  pandas_memo.ipynb  pyproject.toml  raddar_01.ipynb  raddar_02.ipynb  raddar_03.ipynb  raddar_04.ipynb  taniguchi_eda_02.ipynb  tensorflow_tutorial.ipynb  test_01_test.ipynb  test_03_test.ipynb  utils.py  utils_scratch.py  utils_scratch2.py
