[tool.poetry]
name = "amex_default_prediction"
version = "0.1.0"
description = ""
authors = ["dummy@dummy"]

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
pandas = "^1.4.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.3"
seaborn = "^0.11.2"
dask = "^2022.9.0"
plotly = "^5.10.0"
lightgbm = "^3.3.2"
colorama = "^0.4.5"
tqdm = "^4.64.1"
xgboost = "^1.6.2"
pyarrow = "^9.0.0"
fastparquet = "^0.8.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
